--- a/deno.json
+++ b/deno.json
@@ -2,5 +2,8 @@
   "name": "@ayakovlenko/chmod",
   "license": "MIT",
   "version": "1.0.0",
-  "exports": "./mod.ts"
+  "exports": "./mod.ts",
+  "imports": {
+    "@std/assert": "jsr:@std/assert@^1.0.6"
+  }
 }
