--- a/deno.json
+++ b/deno.json
@@ -5,5 +5,10 @@
   "exports": "./mod.ts",
   "imports": {
     "@std/assert": "jsr:@std/assert@^1.0.6"
+  },
+  "publish": {
+    "exclude": [
+      ".github/"
+    ]
   }
 }
